# tp-gitlab

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: build-dev.yml  build-stable.yml  build.yml  coverage.yml  pages.yml
docs/: conf.py  index.rst
src/my_arithmetic_lperroud/: __about__.py  functions.py
tests/: __init__.py  test_functions.py
workflows/: build.yml
