[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-lperroud"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Lukaribou", email = "lucas.perroud@etudiant.univ-lr.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Lukaribou/my-arithmetic-lperroud#readme"
Issues = "https://github.com/Lukaribou/my-arithmetic-lperroud/issues"
Source = "https://github.com/Lukaribou/my-arithmetic-lperroud"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_lperroud tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_lperroud", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_lperroud/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_lperroud = ["src/my_arithmetic_lperroud", "*/my-arithmetic-lperroud/src/my_arithmetic_lperroud"]
tests = ["tests", "*/my-arithmetic-lperroud/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"